- If qutebrowser was set up (or packaged) in an unclean environment, this could
  result in a stale `qutebrowser/components/adblock.py` file being picked up. That
  file is not part of the release anymore, but if an old version is still around,
  causes qutebrowser to crash. It's now explicitly blocked inside qutebrowser so
  it gets ignored even if it still exists.

Changed
~~~~~~~

- The `format_json` userscript now uses sh instead of bash again.
- The `add-nextcloud-bookmarks`, `add-nextcloud-cookbook`, `readability` and
  `ripbang` userscripts now use a `python3` rather than plain `python` shebang.
- When `QTWEBENGINE_CHROMIUM_FLAGS` is set in the environment, this causes flag
  handling (including workarounds for QtWebEngine crashes) inside qutebrowser to
  break. This will be handled properly in a future version, but this release now
  shows a warning on standard output if this is the case.

[[v2.0.0]]
v2.0.0 (2021-01-28)
-------------------

Major changes
~~~~~~~~~~~~~

- If the Python `adblock` library is available, it is now used to
  integrate Brave's Rust adblocker library for improved adblocking based on
  ABP-like filter lists (such as EasyList).
  If it is unavailable, qutebrowser falls back to host-blocking, i.e. the same
  blocking technique it used before this release. As part of this, various
  settings got renamed, see "Changed" below.
  **Note: If the `adblock` dependency is available, qutebrowser will ignore
  custom host blocking** via the `blocked-hosts` config file or `file:///` URLs
  supplied as host blocking lists. You will need to either migrate those to
  ABP-like lists, or set `content.blocking.method` to `both`.
- Various dependency upgrades - a quick checklist for packagers (see "Changed"
  below for details):
  * Ensure you're providing at least Python 3.6.1.
  * Ensure you're providing at least Qt 5.12 and PyQt 5.12.
  * Add a new optional dependency on the Python `adblock` library (if packaged -